--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,12 @@ dependencies = [
     "ddsp>=3.0.0",
     "scipy",
     "tqdm>=4.66",
-    "pyworld"
+    "pyworld",
+    "pydub",
+    "soundfile",
+    "librosa"
     #"torch>=2.7.0",
     #"torchaudio>=2.7.0",
-    #"librosa<=0.10",
     #"soundfile>=0.12",
 ]
 
